# notebookmaker

./: .env.example  .gitignore  .notebookmaker_config.yaml.example  AGENTS.md  CLAUDE.md  DESIGN_TWO_PHASE.md  GEMINI.md  Project_Progress.md  README.md  README_TWO_PHASE.md  pyproject.toml  test_llm_providers.py
examples/: L12-HypothesisTesting.analysis.json  L12-HypothesisTesting_instructor.ipynb  L12-HypothesisTesting_instructor.py  L12_HypothesisTesting_student.ipynb  analysis_example.json
prompts/: config.json  instructor_notebook_template.md  notebook_prompt_early_version.md  student_notebook_template.md  topics_prompt_early_version.md
prompts/fragments/: analysis_instructions.md  analysis_output_format.md  generation_instructions.md  instructor.md  instructor_version.md  notebook_structure.md  output_format.md  role.md  student.md  student_version.md  tone.md
src/notebookmaker/: __init__.py  analysis.py  cli.py  generation.py  models.py  utils.py  vision.py
src/notebookmaker/llm/: __init__.py  credentials.py  models.py  providers.py
tests/: __init__.py  test_analysis_google.py  test_analysis_other_providers.py  test_generation_errors.py  test_utils_google_flow.py  test_vision_utils.py
